# LR_2

./: .travis.yml  CMakeLists.txt  Dockerfile  bashn  cache.cpp  direct.txt  main  random.txt  return.txt
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: header.hpp
sources/: source.cpp
tests/: test.cpp
